--- a/source/RevitDevTool/View/Settings/VisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/VisualizationSettingsView.xaml
@@ -5,7 +5,6 @@
              xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             Margin="0,5,0,0"
              d:DesignHeight="630"
              d:DesignWidth="600"
              Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
@@ -115,7 +114,7 @@
         <mah:HamburgerMenu.ContentTemplate>
             <DataTemplate>
                 <ContentControl x:Name="ContentArea"
-                                Margin="8,5"
+                                Margin="0 5 5 5"
                                 Content="{Binding}" />
             </DataTemplate>
         </mah:HamburgerMenu.ContentTemplate>
