--- a/source/RevitDevTool/View/SettingsView.xaml
+++ b/source/RevitDevTool/View/SettingsView.xaml
@@ -22,7 +22,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid Margin="5">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
@@ -43,7 +43,7 @@
         <!--  Reset  -->
         <Button Grid.Row="1"
                 Width="100"
-                Margin="8 0 8 8"
+                Margin="5 0 5 5"
                 HorizontalAlignment="Right"
                 HorizontalContentAlignment="Center"
                 Command="{Binding ResetSettingsCommand}"
