--- a/source/RevitDevTool/View/TraceLogPage.xaml
+++ b/source/RevitDevTool/View/TraceLogPage.xaml
@@ -1,6 +1,7 @@
 <Page x:Class="RevitDevTool.View.TraceLogPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:converters="clr-namespace:RevitDevTool.View.Converters"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:design="clr-namespace:RevitDevTool.Theme.Design"
       xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
@@ -8,7 +9,6 @@
       xmlns:system="clr-namespace:System;assembly=System.Runtime"
       xmlns:view="clr-namespace:RevitDevTool.View"
       xmlns:vm="clr-namespace:RevitDevTool.ViewModel"
-      xmlns:converters="clr-namespace:RevitDevTool.View.Converters"
       d:DataContext="{d:DesignInstance vm:TraceLogPageViewModel}"
       d:DesignHeight="600"
       d:DesignWidth="450"
@@ -23,6 +23,7 @@
             </ResourceDictionary.MergedDictionaries>
             <BooleanToVisibilityConverter x:Key="BoolToVisibility" />
             <converters:InverseBooleanToVisibilityConverter x:Key="InverseBoolToVisibility" />
+            <converters:IntToVisibilityConverter x:Key="IntToVisibility" />
         </ResourceDictionary>
     </Page.Resources>
 
@@ -97,6 +98,23 @@
                               Stretch="Uniform" />
                         <TextBlock Margin="5"
                                    Text="Clear Geometry" />
+                        <Grid HorizontalAlignment="Stretch"
+                              Height="20"
+                              Margin="0 0 5 0"
+                              Visibility="{Binding TraceLogViewModel.GeometryCount, Converter={StaticResource IntToVisibility}}"
+                              VerticalAlignment="Center">
+                            <Rectangle Fill="{DynamicResource MahApps.Brushes.Accent}"
+                                       RadiusX="3"
+                                       RadiusY="3" />
+                            <TextBlock Text="{Binding TraceLogViewModel.GeometryCount}"
+                                       FontSize="10"
+                                       FontWeight="SemiBold"
+                                       Padding="0"
+                                       Margin="3"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"
+                                       IsHitTestVisible="False" />
+                        </Grid>
                     </StackPanel>
                 </Button>
                 <Button Margin="0,0,5,0"
